@@ -96,10 +96,10 @@ final class Dispatcher
         return preg_split('/\//', $url, -1, PREG_SPLIT_NO_EMPTY);
     }
     
-    public static function dispatch($requested_url=null)
+    public static function dispatch($requested_url = null, $default = null)
     {
         Flash::init();
-        
+
         // if no url passed, we will get the first key from the _GET array
         // that way, index.php?/controller/action/var1&email=example@example.com
         // requested_url will be equal to: /controller/action/var1
@@ -110,6 +110,12 @@ final class Dispatcher
             } else {
                 $requested_url = $_SERVER['QUERY_STRING'];
             }
+        }
+
+        // If no URL is requested (due to someone accessing admin section for the first time)
+        // AND $default is setAllow for a default tab
+        if ($requested_url == null && $default != null) {
+            $requested_url = $default;
         }
         
         // requested url MUST start with a slash (for route convention)
@@ -164,9 +170,20 @@ final class Dispatcher
     
     public static function getController()
     {
+        // Check for settable default controller
+        // if it's a plugin and not activated, revert to Frog hardcoded default
+        if (isset(self::$params[0]) && self::$params[0] == 'plugin' )
+        {
+            $loaded_plugins = Plugin::$plugins;
+            if (isset(self::$params[1]) && !isset($loaded_plugins[self::$params[1]])) {
+                unset(self::$params[0]);
+                unset(self::$params[1]);
+            }
+        }        
+
         return isset(self::$params[0]) ? self::$params[0]: DEFAULT_CONTROLLER;
     }
-    
+        
     public static function getAction()
     {
         return isset(self::$params[1]) ? self::$params[1]: DEFAULT_ACTION;
@@ -200,7 +217,7 @@ final class Dispatcher
         if ( ! $controller instanceof Controller) {
             throw new Exception("Class '{$controller_class_name}' does not extends Controller class!");
         }
-        
+
         // execute the action
         $controller->execute($action, $params);
     }
