@@ -75,6 +75,23 @@
         </td>
         <td class="help"><?php echo __('This will change your Administration theme.'); ?></td>
       </tr>
+        <tr>
+        <td class="label"><label for="setting_default_tab"><?php echo __('Default tab'); ?></label></td>
+        <td class="field">
+          <select class="select" id="setting_default_tab" name="setting[default_tab]">
+<?php $current_default_tab = Setting::get('default_tab');?>
+            <option value="page"<?php if ($current_default_tab == 'page') echo ' selected="selected"'; ?>><?php echo __('Pages'); ?></option>
+            <option value="snippet"<?php if ($current_default_tab == 'snippet') echo ' selected="selected"'; ?>><?php echo __('Snippets'); ?></option>
+            <option value="layout"<?php if ($current_default_tab == 'layout') echo ' selected="selected"'; ?>><?php echo __('Layouts'); ?></option>
+            <option value="user"<?php if ($current_default_tab == 'user') echo ' selected="selected"'; ?>><?php echo __('Users'); ?></option>
+            <option value="setting"<?php if ($current_default_tab == 'setting') echo ' selected="selected"'; ?>><?php echo __('Administration'); ?></option>
+<?php foreach(Plugin::$controllers as $key=>$controller): ?>
+            <option value="plugin/<?php echo $key; ?>"<?php if ('plugin/'.$key == $current_default_tab) echo ' selected="selected"'; ?>><?php echo $controller->label; ?></option>
+<?php endforeach; ?>
+          </select>
+        </td>
+        <td class="help"><?php echo __('This allows you to specify which tab (controller) you will see by default after login.'); ?></td>
+      </tr>
       <tr>
         <td colspan="3"><h3><?php echo __('Page options'); ?></h3></td>
       </tr>
